# rustcodeshow

./: .gitignore  README.md
aula01/: hello.rs
aula01/proj/src/: main.rs
aula02/proj/src/: main.rs
aula03/: Cargo.toml
aula03/src/: main.rs
aula04/: Cargo.toml
aula04/src/: main.rs
aula05/: Cargo.toml
aula05/src/: main.rs
aula06/: Cargo.toml
aula06/src/: main.rs
aula3/src/: main.rs
